Updated the project to Java 17
Breaking change: Alert was changed to a record